<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/wiz_settings_header"
        android:textAppearance="?android:textAppearance"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="16dp"
        android:background="#ffe5e5e5" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_weight="1.0"
        android:text="@string/wiz_settings_text"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip" >

            <TextView
                android:id="@id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:text="@string/contacts_to_sync"
                android:textAppearance="?android:textAppearance" />

            <Spinner
                android:id="@+id/contactSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:background="#ffe5e5e5" />

        <Switch
            android:id="@+id/switchEvent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:checked="true"
            android:text="@string/sync_events" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:background="#ffe5e5e5" />

        <Switch
            android:id="@+id/switchBirthdays"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:checked="true"
            android:text="@string/sync_birthdays" />

        <View
            android:id="@+id/seperatorBirthdays"
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:background="#ffe5e5e5" />

        <Switch
            android:id="@+id/switchReminders"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="16.0dip"
            android:checked="true"
            android:text="@string/wiz_settings_reminder" />
    </LinearLayout>

</LinearLayout>