<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/done"
        android:textAppearance="?android:textAppearance"
        android:gravity="center"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="16dp"
        android:background="#ffe5e5e5" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:src="@drawable/ic_done_tick" android:layout_weight="1"/>

    <TextView
        android:id="@id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/wiz_success_text1"
        android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="bottom"/>

    <CheckBox
        android:id="@+id/checkHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="16dp"
        android:text="@string/wiz_success_hide" />

</LinearLayout>