<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/wiz_login_fb_header"
        android:textAppearance="?android:textAppearance"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="16dp"
        android:background="#ffe5e5e5" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="8.0dip"
        android:text="@string/wiz_login_fb_text1"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:layout_marginTop="8.0dip"
        android:text="@string/wiz_login_fb_text2"
        android:textAppearance="?android:textAppearanceMedium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/fbButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wiz_login_fb_header"
            android:textColor="@android:color/white" />

    </FrameLayout>

</LinearLayout>