<!--
  Copyright 2010 Sam Steele
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="samsung_hax">

    <!-- <CheckBoxPreference android:title="Sync Automatically" android:key="autosync" /> -->
    <PreferenceScreen android:title="@string/wizard" 
        android:key="samsung_hax">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.mots.haxsync.activities.WizardActivity"
            android:targetPackage="org.mots.haxsync" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/preferences" 
        android:key="samsung_hax">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.mots.haxsync.activities.Preferences"
            android:targetPackage="org.mots.haxsync" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/about" 
        android:key="samsung_hax">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.mots.haxsync.activities.AboutPopup"
            android:targetPackage="org.mots.haxsync" />
 </PreferenceScreen>
<!--      <PreferenceScreen android:title="@string/visit_fb" -->
<!--         android:summary="@string/visit_fb_description" -->
<!--         android:key="samsung_hax"> -->
<!--         <intent android:action="android.intent.action.VIEW" -->
<!--                 android:data="http://www.facebook.com/HaxSync" /> -->
<!--  </PreferenceScreen> -->
<!--       <PreferenceScreen android:title="@string/report_issue"  -->
<!--           android:summary="@string/report_issue_description" -->
<!--         android:key="samsung_hax"> -->
<!--         <intent android:action="android.intent.action.VIEW" -->
<!--                 android:data="http://haxsync.com/projects/haxsync/wiki/How_to_report_an_issue" /> -->
<!--  </PreferenceScreen> -->
</PreferenceScreen>